--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,8 @@
 <body>
     {{>_navbar}}
     <div class="container mt-4">
+        apagar dpois
+        {{>_msg}}
     {{{body}}}
     </div>
     
