--- a/views/admin/editcategorias.handlebars
+++ b/views/admin/editcategorias.handlebars
@@ -11,6 +11,7 @@
 <div class="card">
     <div class="card-body">
         <form action="/admin/categorias/nova" method="POST">
+            <input type="hidden" name="id" value="{{categoria._id}}">
             <label for="nome">nome:</label>
                 <input type="text" id="nome" name="nome" placeholder="nome da categoria " value="{{categoria.nome}}" class="form-control">
             <label for="slug"> slug</label>
