--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -3,7 +3,7 @@
 <div class="alert alert-success">{{success_msg}}</div>
 
 {{/if}}
-{{#if   err_msg}}
+{{#if   error_msg}}
 <div class="alert alert-danger"> {{error_msg}}
 
 </div>
