--- a/views/admin/editcategorias.handlebars
+++ b/views/admin/editcategorias.handlebars
@@ -1,6 +1,6 @@
 {{#each erro}}
 
-<div class="alert alert-danger">{{texto}}</div>
+<div class="alert alert-danger">{{erro}}</div>
 
 {{else}}
 
@@ -10,7 +10,7 @@
 <h3>Editar Categoria</h3>
 <div class="card">
     <div class="card-body">
-        <form action="/admin/categorias/nova" method="POST">
+        <form action="/admin/categorias/edit" method="POST">
             <input type="hidden" name="id" value="{{categoria._id}}">
             <label for="nome">nome:</label>
                 <input type="text" id="nome" name="nome" placeholder="nome da categoria " value="{{categoria.nome}}" class="form-control">
