--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -9,8 +9,12 @@
          <h4>{{nome}}</h4>
          <small>{{slug}}</small><br>
          <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Categoria</button></a>
-
+        <form action="/admin/categorias/deletar" method="POST">
+            <input type="hidden" name="id" value="{{_id}}">
+            <button class="btn btn-danger mt-2">Deletar categoria</button>
+        </form>
      </div>
  </div>
  {{else}}
+ <h4 class="mt-4">Nenhuma categoria registrada!</h4>
  {{/each}}
