--- a/views/admin/addpostagem.handlebars
+++ b/views/admin/addpostagem.handlebars
@@ -11,14 +11,14 @@
             <label for="conteudo">Conteudo</label>
             <textarea name="conteudo" class="form-control"></textarea>
             <label for="categorias">Categorias</label>
-            <select name="categorias" id="">
+            <select name="categorias" class="form-select">
                 {{#each categorias}}
                 <option value="{{_id}}">{{nome}}</option>
                 {{else}}
                 <option value="">Nenhuma categoria</option>
                 {{/each}}
             </select>
-            <button type="submit" class="btn btn-success">Criar Postagem</button>
+            <button type="submit" class="btn btn-success mt-2"  >Criar Postagem</button>
         </form>
     </div>
 </div>
