--- a/views/admin/addpostagem.handlebars
+++ b/views/admin/addpostagem.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-body">
         <h4>Nova Postagem:</h4>
-        <form action="">
+        <form action="/admim/postagem/nova">
             <label for="titulo">Título</label>
             <input type="text" name="titulo" class="form-control">
             <label for="slug">Slug</label>
@@ -15,7 +15,7 @@
                 {{#each categorias}}
                 <option value="{{_id}}">{{nome}}</option>
                 {{else}}
-                <option value="">Nenhuma categoria</option>
+                <option value="0">Nenhuma categoria</option>
                 {{/each}}
             </select>
             <button type="submit" class="btn btn-success mt-2"  >Criar Postagem</button>
