--- a/views/admin/addpostagem.handlebars
+++ b/views/admin/addpostagem.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-body">
         <h4>Nova Postagem:</h4>
-        <form action="/admim/postagem/nova">
+        <form action="/admin/postagens/nova" method="POST">
             <label for="titulo">Título</label>
             <input type="text" name="titulo" class="form-control">
             <label for="slug">Slug</label>
