--- a/views/admin/addpostagem.handlebars
+++ b/views/admin/addpostagem.handlebars
@@ -1,3 +1,10 @@
+{{#each erros}}
+
+<div class="alert alert-danger">{{texto}}</div>
+
+{{else}}
+{{/each}}
+
 <div class="card">
     <div class="card-body">
         <h4>Nova Postagem:</h4>
@@ -6,7 +13,7 @@
             <input type="text" name="titulo" class="form-control">
             <label for="slug">Slug</label>
             <input type="text" name="slug" class="form-control">
-            <label for="descreicao">Descriçao</label>
+            <label for="descricao">Descriçao</label>
             <input type="text" name="descricao" class="form-control">
             <label for="conteudo">Conteudo</label>
             <textarea name="conteudo" class="form-control"></textarea>
