--- a/views/admin/addpostagem.handlebars
+++ b/views/admin/addpostagem.handlebars
@@ -18,7 +18,7 @@
             <label for="conteudo">Conteudo</label>
             <textarea name="conteudo" class="form-control"></textarea>
             <label for="categorias">Categorias</label>
-            <select name="categoria" class="form-select">
+            <select name="categorias" class="form-select">
                 {{#each categorias}}
                 <option value="{{_id}}">{{nome}}</option>
                 {{else}}
