--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,11 +1,11 @@
 <h2>Lista Categorias </h2>
 <hr>
- <a href="/admin/categoria/add"><button  class="btn btn-success">Adicionar Categoria</button></a>
+ <a href="/admin/categoria/add"><button  class="btn btn-success mb-3">Adicionar Categoria</button></a>
 
  {{#each categorias}}
 
- <div class="card ">
-     <div class="card-body mt-4">
+ <div class="card mt-4" >
+     <div class="card-body">
          <h4>{{nome}}</h4>
          <small>{{slug}}</small><br>
          <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Categoria</button></a>
