--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -1,3 +1,21 @@
 <h2>Lista Postagens </h2>
 <hr>
- <a href="/admin/postagens/add"><button  class="btn btn-success">Adicionar Postagens</button></a>
+ <a href="/admin/postagens/add"><button  class="btn btn-success mb-3">Adicionar Postagens</button></a>
+
+ {{#each postagens}}
+ <div class="card mt-4">
+     <div class="card-body ">
+         <h4>{{titulo}}</h4>
+         <p> Descriçao: {{descricao}}</p>
+         <small>Data: {{data}}</small><br>
+         <small>Categoria: {{categoria.nome}}</small>
+
+     </div>
+ </div>
+
+
+ {{else}}
+
+ <p>nenhuma postagem registrada </p>
+
+ {{/each}}
