--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -8,7 +8,8 @@
          <h4>{{titulo}}</h4>
          <p> Descriçao: {{descricao}}</p>
          <small>Data: {{data}}</small><br>
-         <small>Categoria: {{categoria.nome}}</small>
+         <small>Categoria: {{categoria.nome}}</small><br>
+         <a href="/admin/postagens/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Postagem</button></a>
 
      </div>
  </div>
