--- a/views/admin/editpostagens.handlebars
+++ b/views/admin/editpostagens.handlebars
@@ -9,7 +9,7 @@
     <div class="card-body">
         <h4>Editar Postagem:</h4>
         <form action="/admin/postagem/edit" method="POST">
-            <input type="hidden" name="id">
+            <input type="hidden" name="id" value="{{postagem._id}}">
             <label for="titulo">Título</label>
             <input type="text" name="titulo" value="{{postagem.titulo}}" class="form-control">
             <label for="slug">Slug</label>
